@@ -2,6 +2,7 @@
 SCRIPT_NAME=elf
 ELFSIZE=64
 TEMPLATE_NAME=elf32
+EXTRA_EM_FILE=needrelax
 OUTPUT_FORMAT="elf64-ia64-little"
 ARCH=ia64
 MACHINE=
